--- a/bsc_thesis.tex
+++ b/bsc_thesis.tex
@@ -105,13 +105,19 @@
 	
 	\section*{Zusammenfassung}
 	
-	Hier kommt die Zusammenfassung hin!!!
+	 Mobile Roboter sind ein immer größer werdender Bestandteil unserer Gesellschaft. Ob als autonom fahrende Fahrzeuge, Service- oder Aufklärungsroboter, übernehmen sie wichtige Aufgaben im menschlichen Umfeld. Diese Arbeit beschäftigt sich mit kostengünstigen Mobilen Robotern und untersucht dabei im Besonderen die Wiederverwertbarkeit ausgemusterter Exemplare und ihre Modernisierung. Es wird ein Ct'Bot von 2006 komplett neu entwickelt und ein Software-Framework in Python vorgestellt, das eine effiziente Steuerung und Kartierung erlaubt. Das Ergebnis veranschaulicht, dass ältere Roboter heutigen Anforderungen gewachsen sein können und eine Wiederverwertung alter Bauteile sinnvoll sein kann. Aus wirtschaftlicher und umweltpolitischer Sicht ist dies eine wichtiger Erkenntnis und könnte ein Ausblick in die zukünftige Verwendung abgeschriebener Hardware sein. 
+	 \section*{Abstract}
+	 
+	 Mobile robots are becoming an ever larger part of our society. Whether as autonomous vehicles, service or exploration robots, they perform important tasks in the human environment. This work deals with low-cost mobile robots and examines in particular the re usability of discarded specimens and their modernization. A Ct'Bot from 2006 will be completely redeveloped and a software framework implemented in Python that allows efficient control and mapping. The result illustrates that older robots can meet today's requirements and that the recycling of old components can make sense. From an economic and environmental point of view, this is an important conclusion and could be an outlook for future use of depreciated hardware. 
+	
+	
 	
 	\newpage
 	
 	\section*{Danksagung}
-	Mein Dank gilt Prof. Zell, der diese Bachelorarbeit engagiert ermöglicht und begleitet hat. \\
-	Weiterhin möchte ich mich herzlich beim Wohnheim Rechberghaus bedanken für die Bereitstellung einer Werkstatt. Ohne diese Hilfe wären mir manche Arbeiten am Roboter kaum möglich gewesen. 
+	Mein Dank gilt Prof. Zell, der diese Bachelorarbeit ermöglicht und engagiert begleitet hat. \\
+	Weiterhin möchte ich mich herzlich beim Wohnheim Rechberghaus und Herrn Haile für die Bereitstellung einer Werkstatt bedanken. Ohne diese Hilfe wären mir manche Arbeiten am Roboter nicht möglich gewesen. 
+	
 	\cleardoublepage
 	
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -143,8 +149,8 @@
 	\section{Autonome Mobile Roboter}
 	Mobile Roboter werden für eine große Bandbreite an Arbeiten eingesetzt, darunter die Erkundung und das Verrichten von Arbeiten in menschenfeindlichen Umgebungen oder als Service-Roboter zum Rasenmähen oder Staubsaugen.\\
 	Die Bezeichnung autonom meint hierbei, dass die Roboter ihre Aufgaben selbstständig erledigen. Dazu gehören neben der reinen Tätigkeit auch Themen wie das Fahren, Erfassen von Zielen, Erstellen von Karten ihrer Umgebung und zurechtfinden in unbekanntem Terrain. \\
-	Mobile Roboter sind seit den 1960ern ein Feld intensiver Forschung mit vielen Applikationen in der Industrie. Seit den 2000ern werden eine Vielzahl von verschiedenen Mobilen Robotern für die Industrie produziert. Diese frühen Generationen von Robotern sind aus heutiger Sicht überholt. Oft lässt sich weder die Hardware noch die Software für moderne Anforderungen konfigurieren.\\
-	Eine Kernfrage dieser Arbeit ist, ob sich ein solcher Roboter, exakter: der Ct'Bot des Heise Verlags aus dem Jahr 2006, mit minimalem Aufwand an Kosten und Umbau so neu gestalten lässt, dass er diesen Herausforderungen gewachsen ist. \\
+	Mobile Roboter sind seit den 1960ern ein Feld intensiver Forschung mit vielen Applikationen in der Industrie. Seit den 2000ern wird eine Vielzahl von verschiedenen Mobilen Robotern für die Industrie produziert. Diese frühen Generationen von Robotern sind aus heutiger Sicht überholt. Oft lässt sich weder die Hardware noch die Software für moderne Anforderungen konfigurieren.\\
+	Eine Kernfrage dieser Arbeit ist, ob sich ein solcher Roboter - exakter: der Ct'Bot des Heise Verlags aus dem Jahr 2006 - mit minimalem Aufwand an Kosten und Umbau so neu gestalten lässt, dass er diesen Herausforderungen gewachsen ist. \\
 	Dies würde die Wiederverwertbarkeit älterer Roboter ermöglichen und so einen erheblichen Beitrag zu Kostensenkung und zum Umweltschutz garantieren, welche mit einer Neuanschaffung nicht zu realisieren wären. 
 	
 	\section{Ziel dieser Arbeit}
@@ -162,7 +168,7 @@
 	
 	Diese Arbeit erörtert im Folgenden die Grundlagen der Mobilen Robotik Hardware und- eingeschränkt- das Thema Kartierung und SLAM (Simultainous Lokalization and Mapping). Danach wird ausführlich über die vorhandene Hardware und die Erneuerung des Roboters berichtet. Für den fertigen Roboter wird dann ein Software-Framework vorgestellt, welches eine Plattform für die komplette Funktionalität darstellt. \\
 	Abschließend werden verschiedene  Tests des Prototypen präsentiert und die Ergebnisse erörtert. \\
-	Mit einer Zusammenfassung der Arbeit und einen Ausblick endet diese Dokumentation.  
+	Mit einer Zusammenfassung der Arbeit und einem Ausblick endet diese Dokumentation.  
 	
 	
 	
@@ -170,37 +176,37 @@
 	
 	% ganze Kapitel 5 Seiten max
 	\chapter{Grundlagen}
-	In diesem Kapitel werden die Grundlagen, welche zum Verständnis dieser Arbeit benötigt werden kurz erläutert.
+	In diesem Kapitel werden die Grundlagen, welche zum Verständnis dieser Arbeit benötigt werden, kurz erläutert.
 	
 	\section{Hardware Mobiler Roboter}
 
-	Ein Mobiler Roboter ist die Intelligente Verbindung von Wahrnehmung und Aktion, \cite{McKerrow1991}. Mit dieser Definition ergibt sich für die Hardware-Anforderungen eines Mobilen Roboters eine minimale Anforderung von: 
+	Ein Mobiler Roboter ist die intelligente Verbindung von Wahrnehmung und Aktion, \cite{McKerrow1991}. Mit dieser Definition ergibt sich für die Hardware-Anforderungen eines Mobilen Roboters eine minimale Anforderung von: 
 	\begin{itemize}
 		\item Intelligenz: \\
-		Ein Mobiler Roboter muss in der Lage sein komplexe Algorithmen auszuführen und - wenn möglich - aus seinem bisherigen Handeln zu lernen. Hierzu braucht er mindestens eine Hauptplatine für die Rechenarbeiten. Diese muss fähig sein, die Steuerung der restlichen Hardware auf Basis des Roboter-Wissens zu lenken. Hertzberger, Lingemann und Nüchter führen zusätzlich die Ungewissheit ein, mit welcher ein Mobiler Roboter umgehen muss. Durch die Veränderungen in seiner Umwelt kann ein Mobiler Roboter sollte ein dieser mit Ungewissheiten arbeiten und auf Veränderungen reagieren können, \cite{HeLiNue2012}.
+		Ein Mobiler Roboter muss in der Lage sein, komplexe Algorithmen auszuführen und - wenn möglich - aus seinem bisherigen Handeln zu lernen. Hierzu braucht er mindestens eine Hauptplatine für die Rechenarbeiten. Diese muss fähig sein, die Steuerung der restlichen Hardware auf Basis des Roboter-Wissens zu lenken. Hertzberger, Lingemann und Nüchter führen zusätzlich die Ungewissheit ein, mit welcher ein Mobiler Roboter umgehen muss. Durch die Veränderungen seiner Umwelt sollte ein Mobiler Roboter mit Ungewissheiten arbeiten und auf Veränderungen reagieren können, \cite{HeLiNue2012}.
 		\item Wahrnehmung: \\
-		Der Roboter interagiert mit seiner Umwelt. Im Gegensatz zu stationären Robotern verändert sich seine Umgebung dynamisch mit den eigenen Aktionen. Daher muss er diese Veränderungen wahrnehmen und messen können. Hierzu dienen Sensoren, welche z.B. die Distanz von Objekten, die Temperatur, Geräusche oder Luftfeuchtigkeit messen können. Kameras können dem Roboter ebenso nützlich sein wie reine Messsensorik. Insbesondere wenn Gegenstände erkannt und gefasst werden sollen. Welche Sensorik ein Mobiler Roboter braucht, hängt von seinem Einsatzort und -zweck ab.\footnote{Bei \cite{Hering2012} findet man eine außerordentlich große Liste aller möglichen Sensortechniken.} \\
-		Alle Mobilen Roboter brauchen hingegen eine Möglichkeit die eigene Position und Ausrichtung, genannt Pose, messen zu können. Dies kann über Sensorik direkt am Roboter gemessen werden oder über erweitere Messdienste wie z.B. GPS-Daten oder in der Umwelt aufgestellte Positionsmarkierungen. 
+		Der Roboter interagiert mit seiner Umwelt. Im Gegensatz zu stationären Robotern verändert sich seine Umgebung dynamisch mit den eigenen Aktionen. Daher muss er diese Veränderungen wahrnehmen und messen können. Hierzu dienen Sensoren, welche z.B. die Distanz von Objekten, die Temperatur, Geräusche oder Luftfeuchtigkeit messen können. Kameras können dem Roboter ebenso nützlich sein wie reine Messsensorik, insbesondere wenn Gegenstände erkannt und gefasst werden sollen. Welche Sensorik ein Mobiler Roboter braucht, hängt von seinem Einsatzort und -zweck ab.\footnote{Bei \cite{Hering2012} findet man eine außerordentlich große Liste aller möglichen Sensortechniken.} \\
+		Alle Mobilen Roboter brauchen hingegen eine Möglichkeit, die eigene Position und Ausrichtung, genannt Pose, messen zu können. Dies kann über Sensorik direkt am Roboter gemessen werden oder über erweitere Messdienste wie z.B. GPS-Daten oder in der Umwelt aufgestellte Positionsmarkierungen. 
 		\item Aktion:\\
-		Mobile Roboter sollten in der Lage sein, physische Aktionen ausführen zu können um mit ihrer Umwelt interagieren zu können. Die Mobilität taucht dabei schon in der Bezeichnung auf und erfordert, dass der Roboter zumindest beweglich ist. Klassisch werden Mobile Roboter über Elektromotoren angetrieben und erhalten so die Möglichkeit ihre eigene Position in der euklidischen Ebene verändern zu können. Drohnen können sich dagegen drei Dimensional fortbewegen und erfordern eine komplexere Steuerung innerhalb der Aktionsplanung.\\
-		Zur Roboter Aktion gehört oft ein Arbeitszweck und damit verbundene notwendige Aktoren wie z.B. Greifarme oder Behälter. Solche Hardware ist Roboter-spezifisch auf den Einsatz auszuwählen. 
+		Mobile Roboter sollten in der Lage sein, physische Aktionen ausführen zu können um mit ihrer Umwelt interagieren zu können. Die Mobilität taucht dabei schon in der Bezeichnung auf und erfordert, dass der Roboter zumindest beweglich ist. Klassisch werden Mobile Roboter über Elektromotoren angetrieben und erhalten so die Möglichkeit ihre eigene Position in der euklidischen Ebene verändern zu können. Drohnen können sich dagegen dreidimensional fortbewegen und erfordern eine komplexere Steuerung innerhalb der Aktionsplanung.\\
+		Zur Roboter Aktion gehört oft ein Arbeitszweck und damit verbundene notwendige Aktuator wie z.B. Greifarme oder Behälter. Solche Hardware ist roboterspezifisch auf den Einsatz auszuwählen. 
 	\end{itemize}
 	
 	
 	
 	\subsection{Mobile Hardware und ihre Lebenszeit}
-	Gordon Moore behauptete 1965, dass sich die Komplexität von Integrierten Schaltkreisen alle zwei Jahre verdoppeln würde, \cite{Moore1965} Diese Aussage wurde bekannt als das Mooresche Gesetz und hält sich bis heute. Die Konsequenz daraus ist, dass jeder neu entwickelte Chip innerhalb weniger Jahre als Leistungsschwach gilt und nicht mehr dem Stand der Technik entspricht. Eine derart radikale und dauerhafte Erneuerung kennt sonst kein Industrieprodukt. Diese schnelllebige Entwicklung setzt sich vom Chip fort auf die fertigen Systeme. Insbesondere Mobile Roboter erleben mit jeder weiteren Generation einen enormen Leistungsschub. Durch die Knappheit von Ressourcen die eine Mobile Hardware mit sich bringt fällt jede weitere technische Innovation schwerer ins Gewicht. Sinkt zum Beispiel der Stromverbrauch des Hauptprozessors, so steigt als Folge die Laufzeit des akku-betriebenen Mobilen Roboters, während dieser Aspekt bei standort-gebundener Hardware kaum Nutzen bringt. Sinkt das Gewicht und die Größe von Sensorbauteilen so wirkt sich das ebenso erheblich auf Erscheinung, Funktionsumfang und -dauer des Mobilen Roboters aus. \\
-	Die Konsequenz dieser Erkenntnis wäre, Hardware und jede Chip-gebundene Technik im 2-3 Jahres-Rhythmus zu tauschen. Betrachtet man bei dieser Überlegung jedoch die Wirtschaftlichen und Umweltpolitischen Aspekte, so scheint das kontraproduktiv. Moderne Roboter können Preise bis weit über einen 6-stelligen Euro Betrag kosten (z.B betragen die reinen Produktions- und Entwicklungskosten des Atlas2 von BostonDynamics mehrere Millionen Dollar pro Stück)\footnote{https://www.bostondynamics.com/atlas, abgerufen am 20.07.2019.}. Versucht man nun seine Wirtschaftlichkeit auf einer Einsatzdauer von 2 Jahren zu berechnen, so muss das Resultat negativ ausfallen. \\
-	Gerade in Unternehmen, wird Hardware daher oft so lange wie möglich genutzt. Zumindest solange eine Möglichkeit besteht diese an die geforderten Arbeitsprozesse anzupassen. \\
+	Gordon Moore behauptete 1965, dass sich die Komplexität von Integrierten Schaltkreisen alle zwei Jahre verdoppeln würde, \cite{Moore1965} Diese Aussage wurde bekannt als das Mooresche Gesetz und hält sich bis heute. Die Konsequenz daraus ist, dass jeder neu entwickelte Chip innerhalb weniger Jahre als leistungsschwach gilt und nicht mehr dem Stand der Technik entspricht. Eine derart radikale und dauerhafte Erneuerung kennt sonst kein Industrieprodukt. Diese schnelllebige Entwicklung setzt sich vom Chip fort auf die fertigen Systeme. Insbesondere Mobile Roboter erleben mit jeder weiteren Generation einen enormen Leistungsschub. Durch die Knappheit von Ressourcen, die eine Mobile Hardware mit sich bringt, fällt jede weitere technische Innovation schwerer ins Gewicht. Sinkt zum Beispiel der Stromverbrauch des Hauptprozessors, so steigt als Folge die Laufzeit des akku-betriebenen Mobilen Roboters, während dieser Aspekt bei standort-gebundener Hardware kaum Nutzen bringt. Sinken das Gewicht und die Größe von Sensorbauteilen, so wirkt sich das ebenso erheblich auf Erscheinung, Funktionsumfang und -dauer des Mobilen Roboters aus. \\
+	Die Konsequenz dieser Erkenntnis wäre, Hardware und jede chip-gebundene Technik im 2-3 Jahres-Rhythmus zu tauschen. Betrachtet man bei dieser Überlegung jedoch die wirtschaftlichen und umweltpolitischen Aspekte, so scheint das kontraproduktiv. Moderne Roboter können Preise bis weit über einen 6-stelligen Euro Betrag kosten (z.B betragen die reinen Produktions- und Entwicklungskosten des Atlas2 von BostonDynamics mehrere Millionen Dollar pro Stück)\footnote{https://www.bostondynamics.com/atlas, abgerufen am 20.07.2019.}. Versucht man nun seine Wirtschaftlichkeit auf einer Einsatzdauer von 2 Jahren zu berechnen, so muss das Resultat negativ ausfallen. \\
+	Gerade in Unternehmen wird Hardware daher oft so lange wie möglich genutzt, zumindest solange eine Möglichkeit besteht, diese an die geforderten Arbeitsprozesse anzupassen. \\
 	
-	Innerhalb der Sensorik-Komponenten ist die Entwicklung ähnlich gelagert - obgleich auch die Erneuerung nicht so schnell wie im Chip-Bereich ausfällt. Insbesondere sind viele Sensoren früh in ihrer heute üblichen Form auf den Markt gekommen. Das zeigt z.B. der Reflexoptokopter wie er auch in unserem Roboter verbaut ist. Der CNY70 ist in seiner jetzigen Bauform schon seit 2001 auf dem Markt. Seitdem hat sich der Preis radikal reduziert (von einem hochklassigen Sensor zu einem 1Cent Produkt), jedoch nicht seine Einsatzgebiete. Reine Sensor-Produkte sind somit mehr von ihrer internen Laufzeit abhängig als von der Entwicklung des Marktes, da sie sehr häufig für einen spezifischen Zweck verbaut werden und nicht frei programmierbare sind. 
+	Innerhalb der Sensorik-Komponenten ist die Entwicklung ähnlich gelagert - obgleich auch die Erneuerung nicht so schnell wie im Chip-Bereich ausfällt. Insbesondere sind viele Sensoren früh in ihrer heute üblichen Form auf den Markt gekommen. Das zeigt z.B. der Reflexoptokopter, wie er auch in unserem Roboter verbaut ist. Der CNY70 ist in seiner jetzigen Bauform schon seit 2001 auf dem Markt. Seitdem hat sich der Preis radikal reduziert (von einem hochklassigen Sensor zu einem 1Cent Produkt), jedoch nicht seine Einsatzgebiete. Reine Sensor-Produkte sind somit mehr von ihrer internen Laufzeit abhängig als von der Entwicklung des Marktes, da sie sehr häufig für einen spezifischen Zweck verbaut werden und nicht frei programmierbare sind. 
 	
 	
-	\section{Software Mobile Roboter}
-	Moderne Mobile Roboter haben ein eigenes Betriebssystem, welches ihre Funktionen im Ganzen steuert und dem Anwender die Funktionalität als (modulares-) Framework bereitstellt. Dies erlaubt es dem Roboter, welche unterschiedlichste Hardware und Sensorik haben, schnell und einfach zu kontrollieren. Hierbei ist vor allem das Robot Operating System (ROS) in der Forschung weit verbreitet. ROS arbeitet mit einem Baukasten-Prinzip, das über Knoten die Anbindung von Sensoren und ihren Daten an einen Roboter ermöglicht. Roboterhersteller entwickeln hierauf aufbauend eigene Betriebssysteme oder Frameworks.\footnote{Eine Industry-ROS-Version wird von ABB eingesetzt. Farnuc und Kuka verwenden hingegen eigene ROS-basierte Abwandlungen oder nutzen ROS bei Bedarf.}\\
-	ROS, als Open-Source-Projekt, wird von den Nutzern ständig weiterentwickelt und um Funktionalitäten erweitert. So sind komplexeste Algorithmen und Sensorsteuerungen direkt im System vorhanden und müssen nicht jedes Mal neu entwickelt werden. Dies ist als seine größte Stärke zu betrachten. Von Nachteil ist die Komplexität des Systems. Die vorhandenen Möglichkeiten zur Erweiterung und Steuerung machen ROS unübersichtlich und führen zu vielen Fehlern bei weniger geübten Nutzern. Des weiteren ist ROS ein großes System. Viele ältere Roboter und schwächere Hauptprozessoren sind nicht in der Lage ROS als Ganzes zu hosten. Es braucht auch nicht jeder Mobile Roboter das vollständige ROS, oft sind diese mit einem kleinen, für sie geschriebenen System schneller und zuverlässiger. \\
-	Als Alternativen für kleinere Systeme haben sich Rasbian, Embedded Linux, Linux Mini-Versionen oder Windows CE etabliert. Die Wahl hängt hier vom Hauptprozessor oder der Steuerungseinheit ab. So eignet sich der Rasbian dann, wenn der Mobile Roboter von einer Raspberry Pi gesteuert wird, während Arduino eine einfache Möglichkeit ist C Code auf einem gleichnamigen Chipset zu implementieren. Windows CE ist eine verschlankte Windows-Variante und sollte zu Beginn ein Betriebsystem für Mobilen Roboter darstellen. Es entwickelte sich aber eher in Richtung Mobile Telefone und Konsumenten-Endgeräte und wird daher kaum noch im Roboterbereich genutzt. Linux hingegen stellt mit seiner Embedded Variante ein Echt-Zeit-Betriebssystem für eine große Anzahl integrierter Chipsets bereit. Werden diese als Roboter vereinigt wird häufig eine Mini-Version eines Desktop-Linux-Systems verwendet. Hierfür eignen sich z.B. Pepermint, Lubuntu oder Linux Lite.   \\
-	Zu diesen Betriebssystemen gibt es noch weitere, spezialisierte Echt-Zeit-Betriebssysteme wie RTLinux oder VxWorks. Diese werden für die Controlle und Vernetzung einzelner Hardware-Komponenten genutzt. Seltener als Framework oder Betriebssystem für einen kompletten Roboter. \\
+	\section{Software Mobiler Roboter}
+	Moderne Mobile Roboter haben ein eigenes Betriebssystem, welches ihre Funktionen im Ganzen steuert und dem Anwender die Funktionalität als (modulares-) Framework bereitstellt. Dies erlaubt es dem Roboter, welche unterschiedlichste Hardware und Sensorik haben, schnell und einfach zu kontrollieren. Hierbei ist vor allem das Robot Operating System (ROS) in der Forschung weit verbreitet. ROS arbeitet mit einem Baukasten-Prinzip, das über Knoten die Anbindung von Sensoren und ihrer Daten an einen Roboter ermöglicht. Roboterhersteller entwickeln hierauf aufbauend eigene Betriebssysteme oder Frameworks.\footnote{Eine Industry-ROS-Version wird von ABB eingesetzt. Farnuc und Kuka verwenden hingegen eigene ROS-basierte Abwandlungen oder nutzen ROS bei Bedarf.}\\
+	ROS, als Open-Source-Projekt, wird von den Nutzern ständig weiterentwickelt und um Funktionalitäten erweitert. So sind komplexeste Algorithmen und Sensorsteuerungen direkt im System vorhanden und müssen nicht jedes Mal neu entwickelt werden. Dies ist als seine größte Stärke zu betrachten. Von Nachteil ist die Komplexität des Systems. Die vorhandenen Möglichkeiten zur Erweiterung und Steuerung machen ROS unübersichtlich und führen zu vielen Fehlern bei weniger geübten Nutzern. Des Weiteren ist ROS ein großes System. Viele ältere Roboter und schwächere Hauptprozessoren sind nicht in der Lage ROS als Ganzes zu hosten. Es braucht auch nicht jeder Mobile Roboter das vollständige ROS, oft sind diese mit einem kleinen, für sie geschriebenen System schneller und zuverlässiger. \\
+	Als Alternativen für kleinere Systeme haben sich Rasbian, Embedded Linux, Linux Mini-Versionen und weitere Betriebssysteme etabliert. Die Wahl hängt hier vom Hauptprozessor oder der Steuerungseinheit ab. So eignet sich der Rasbian dann, wenn der Mobile Roboter von einer Raspberry Pi gesteuert wird, während Arduino eine einfache Möglichkeit ist C Code auf einem gleichnamigen Chipset zu implementieren. Windows CE ist eine verschlankte Windows-Variante und sollte zu Beginn ein Betriebsystem für Mobile Roboter darstellen. Es entwickelte sich aber in Richtung Mobiler Telefone und Konsumenten-Endgeräte und wird daher kaum noch im Roboterbereich genutzt. Linux hingegen stellt mit seiner Embedded Variante ein Echt-Zeit-Betriebssystem für eine große Anzahl integrierter Chipsets bereit. Werden diese als Roboter vereinigt, wird häufig eine Mini-Version eines Desktop-Linux-Systems verwendet. Hierfür eignen sich z.B. Pepermint, Lubuntu oder Linux Lite.   \\
+	Zu diesen Betriebssystemen gibt es noch weitere, spezialisierte Echt-Zeit-Betriebssysteme wie RTLinux oder VxWorks. Diese werden für die Kontrolle und Vernetzung einzelner Hardware-Komponenten genutzt, seltener als Framework oder Betriebssystem für einen kompletten Roboter. \\
 	
 	Die wichtigsten Eigenschaften eines Roboter-Frameworks sind somit :
 	\begin{itemize}
@@ -209,7 +215,7 @@
 		\item Schnelligkeit und Möglichkeit der Echt-Zeit-Datenverarbeitung: \\
 		Hier müssen insbesondere Sensorik-Messdaten direkt ausgelesen und verarbeitet werden können. Dies muss schnell passieren. So braucht z.B. ein klassischer Ultraschall-Sensor für den Betrieb mindestens eine Verbindung zum verarbeitenden System, welche in Schallgeschwindigkeit die Messdaten ablesen kann. 
 		\item Geringer Energieverbrauch:\\
-		Im Bereich der Mobilen Roboter dient der Akku als Hauptstromquelle. Dieser begrenzt die Laufzeit des Systems. Je weniger der Roboter im Ruhezustand verbraucht, umso länger kann er agieren. 
+		Im Bereich der Mobilen Roboter dient der Akku als Hauptstromquelle. Dieser begrenzt die Laufzeit des Systems. Je weniger der Roboter im Ruhezustand verbraucht, desto länger kann er agieren. 
 		\item Möglichkeit der Sensor-Angliederung:\\
 		Das Betriebsystem muss befähigt sein, Sensoren anzusprechen und Daten von diesen empfangen zu können.
 	\end{itemize}
@@ -218,27 +224,27 @@
 	
 	\section{Karten und SLAM }
 	Die Grundlage jeder Interaktion mit seiner Umwelt stellt beim Mobilen Roboter seine Karte dar. Der Roboter bewegt sich innerhalb seiner Umwelt und muss dabei jederzeit wissen wo er sich befindet und wie er zu einem Bezugspunkt ausgerichtet ist. Verliert er dieses Wissen, so gilt er als verloren und ist nicht mehr in der Lage sich korrekt zu orientieren. Dadurch kann er keine weiteren Aufgaben sicher erledigen, welche eine Interaktion mit seiner Umwelt erfordern. \\
-	Mit Hilfe seiner Karte und seiner Ausrichtung kann nun der Roboter sich in seiner Umwelt bewegen, bestimmte Ziele ansteuern und Aufgaben erledigen. Startet der Roboter in einem unbekannten Umfeld, so muss er diese Karte selbstständig generieren. Dieser Prozess wird als Lokalisierung und Kartierung oder simultaneous localization and mapping, SLAM, bezeichnet. Dabei erkundet der Roboter den Raum, erfasst die wichtigsten Umwelt-Daten und hält seine veränderte Position im Bezug zu einem Ursprung zu jedem Zeitpunkt fest. \\
-	Dies wird häufig als Henne-Ei-Problem bezeichnet, da der Roboter eine Karte braucht um sich zu positionieren und orientieren zu können, zeitgleich zum Erstellen der Karte seine Position und Orientierung kennen muss. Diese Probleme separat zu lösen ist für den Roboter einfach, jedoch zeitgleich beide Parameter abzuschätzen, schwer. Das größte Problem in einem SLAM-Algorithmus ist die Potenzierung von Fehlerwerten. Stimmen die Sensordaten zu Position und Orientierung nicht exakt, so treten kleine Verschiebungen auf, welche sich mit jeder weiteren Messung verstärken. \\
-	SLAM ist eine Erweiterung der früheren Mapping Ansätze und ermöglicht durch Schätzungen und Verbesserung der Pose des Roboters die Erstellung besserer Karten in unbekannten Umgebungen. Dabei werden Positionen auf der Karte mit statistischen Belegungswahrscheinlichkeiten gefühlt um Ungewissheiten über die Umgebung auszudrücken. Ebenso wird die Roboter Pose in Frage gestellt und bei jeder Messung mit den vorherigen Iterationen überprüft und die Messdaten angepasst, besonders dann, wenn bereit bekannte Landmarken wiedererkannt werden. An diesen kann der Roboter seine jetzige Pose überprüfen und gegebenenfalls verbessern. \\
+	Mit Hilfe seiner Karte und seiner Ausrichtung kann sich nun der Roboter  in seiner Umwelt bewegen, bestimmte Ziele ansteuern und Aufgaben erledigen. Startet der Roboter in einem unbekannten Umfeld, so muss er diese Karte selbstständig generieren. Dieser Prozess wird als Lokalisierung und Kartierung oder simultaneous localization and mapping, SLAM, bezeichnet. Dabei erkundet der Roboter den Raum, erfasst die wichtigsten Umwelt-Daten und hält seine veränderte Position im Bezug zu einem Ursprung zu jedem Zeitpunkt fest. \\
+	Dies wird häufig als Henne-Ei-Problem bezeichnet, da der Roboter eine Karte braucht um sich zu positionieren und orientieren zu können, zeitgleich zum Erstellen der Karte seine Position und Orientierung kennen muss. Diese Probleme separat zu lösen, ist für den Roboter einfach, jedoch zeitgleich beide Parameter abzuschätzen schwer. Das größte Problem in einem SLAM-Algorithmus ist die Potenzierung von Fehlerwerten. Stimmen die Sensordaten zu Position und Orientierung nicht exakt, so treten kleine Verschiebungen auf, welche sich mit jeder weiteren Messung verstärken. \\
+	SLAM ist eine Erweiterung der früheren Mapping Ansätze und ermöglicht durch Schätzungen und Verbesserung der Pose des Roboters die Erstellung besserer Karten in unbekannten Umgebungen. Dabei werden Positionen auf der Karte mit statistischen Belegungswahrscheinlichkeiten gefühlt um Ungewissheiten über die Umgebung auszudrücken. Ebenso wird die Roboter Pose in Frage gestellt und bei jeder Messung mit den vorherigen Iterationen überprüft und die Messdaten angepasst, besonders dann, wenn bereits bekannte Landmarken wiedererkannt werden. An diesen kann der Roboter seine jetzige Pose überprüfen und gegebenenfalls verbessern. \\
 	Ermöglicht wird ein Mapping-Algorithmus durch die Sensorik des Roboters. Dazu braucht er -meist - zwei Dinge: 
 	\begin{enumerate}
 		\item Odometrie:\\
-		Er muss jede Änderung seiner Position und Ausrichtung exakt messen können. Kann er dies nicht, so verliert er seine Position im Verhältnis zum Ausgangspunkt und die Karte kann nicht mehr korrekt berechnet werden. Dies nennt man Odometrie. In den frühen Jahren der Mobilen Robotik wurden hierfür Radsensoren eingesetzt. Diese sollten jede Bewegung des Roboterrads messen und damit Rückschlüsse auf gefahrene Strecke und Ausrichtung erlauben. Dies lässt sich einfach implementieren, gilt jedoch aufgrund von "wheel slips" (Radbewegungen ohne Bewegungen des Roboters oder Bewegung des Roboters ohne Bewegung der Räder) als sehr ungenau. \\
+		Er muss jede Änderung seiner Position und Ausrichtung exakt messen können. Kann er dies nicht, so verliert er seine Position im Verhältnis zum Ausgangspunkt und die Karte kann nicht mehr korrekt berechnet werden. Paart man die Positionsdaten mit dem Wissen zur eigenen Ausrichtung erhält man die Roboterpose. Das Wissen über die eigene Pose zu jedem Zeitpunkt - besonders nach Bewegungen-  nennt man Odometrie. In den frühen Jahren der Mobilen Robotik wurden hierfür Radsensoren eingesetzt. Diese sollten jede Bewegung des Roboterrads messen und damit Rückschlüsse auf gefahrene Strecke und Ausrichtung erlauben. Dies lässt sich einfach implementieren, gilt jedoch aufgrund von "wheel slips" (Radbewegungen ohne Bewegungen des Roboters oder Bewegung des Roboters ohne Bewegung der Räder) als sehr ungenau. \\
 		Eine weitere Möglichkeit stellen Optical-Flow-Sensoren dar. Diese nehmen aus kürzester Distanz Bilder des Bodens auf. Jede Bewegung des Roboters resultiert nun in einer Verschiebung innerhalb des Bildes. Diese kann berechnet werden und gibt die Veränderung zwischen jeder Bewegung exakt wieder. Optical-Flow-Sensoren werden z.B. in Computer-Mäusen eingesetzt. In der Robotik sind Sie eine Nische, da ihre Nachteile (Sensor muss nah am Boden verbaut sein, Untergrund muss glatt und sauber sein) überwiegen. \\
-		Odometrie Daten können auch über Kameras gewonnen werden. Diese funktionieren wie ein Opti-Flow-Sensor auf einem hoch-frequentierten Vergleich der Bilder miteinander. \\
-		Ebenso eignen sich hierzu Lidar-Sensoren. Diese werden in neuesten Robotern standartmäßig genutzt. Ihre Messungen sind die Exaktesten, jedoch brauchen Sie komplexere Algorithmen und - ihr größter Nachteil - sind vergleichsweise teuer. Dafür erlauben Sie, ebenso wie manche Kameras, die implementierung von Algorithmen, welche Odometrie und Distanzmessung vereinigen. 
+		Odometrie Daten können auch über Kameras gewonnen werden. Diese basieren wie ein Opti-Flow-Sensor auf einem hoch-frequentierten Vergleich der Bilder miteinander. \\
+		Ebenso eignen sich hierzu Lidar-Sensoren. Diese werden in neuesten Robotern standardmäßig genutzt. Ihre Messungen sind die exaktesten, jedoch brauchen sie komplexere Algorithmen und - ihr größter Nachteil - sind vergleichsweise teuer. Dafür erlauben sie, ebenso wie manche Kameras, die Implementierung von Algorithmen, welche Odometrie und Distanzmessung vereinigen. 
 		\item Distanzsensoren:\\
 		Bewegt sich der Roboter, muss er erkennen wo Hindernisse sind. Dies wird durch Distanz-Sensoren erreicht. Der Roboter misst nach jeder Bewegung die Abstände um ihn herum und kann so erkennen wie die Karte zu gestalten ist. Dies kann über klassische Distanzsensoren, wie z.B. Ultraschall oder Lidar passieren, per Kamera oder sonstiger Sensorik. 
 	\end{enumerate}
 	
 	Mit diesen gewonnen Daten kann der Mapping-Algorithmus eine Karte entwickeln. Algorithmen können dabei beide Punkte - Odometrie und Distanzmessung- in einem vereinigen. Viel genutzte Methoden sind beispielhaft Partikel- und Kalman-Filter. Diese Algorithmen haben dabei besondere Anforderungen an die genutzte Sensorik und die Genauigkeit der Daten.\\
 	Einfachere Mapping- und SLAM-Algorithmen verwenden Grid-Karten (Kacheln) und bilden so ihre Umwelt in einem skalierten 'Schachbrett' ab. Grid-Mapping-Algorithmen erstellen Karten mit gröberer Auflösung, sind dafür schneller und weniger komplex zu implementieren. Zudem sind die Anforderungen an die Sensorik geringer, da die Auflösung an den Roboter und die Genauigkeit der Sensoren angepasst werden kann.\\
-	Weitere Möglichkeiten für Karten wären statt eines Grids, diese nach markmalsbasierten (Feature-Based) oder topologisch (topological) Messpunkten aufzubauen. 
+	Weitere Möglichkeiten für Karten wären statt eines Grids, diese nach merkmalsbasierten (Feature-Based) oder topologischen (topological) Messpunkten aufzubauen. 
 	
 	
 	\section{Zusammenfassung}
-	Hard- und Software bilden gemeinsam den Kern dieser Arbeit. Wie veranschaulicht wurde, braucht der Ct'Bot für verschiedene Aufgabenstellungen eine Möglichkeit sich in der Welt zurecht zu finden und sich ein Bild von dieser machen zu können. Im folgenden Kapitel soll mit Hilfe dieses theoretischen Wissens der vorhandene Roboter analysiert werden und jede seiner Komponenten auf Funktionsfähigkeit untersucht werden. \\
+	Hard- und Software bilden gemeinsam den Kern dieser Arbeit. Wie veranschaulicht wurde, braucht der Ct'Bot für verschiedene Aufgabenstellungen eine Möglichkeit sich in der Welt zurecht zu finden und sich ein Bild von dieser zu machen. Im folgenden Kapitel soll mit Hilfe dieses theoretischen Wissens der vorhandene Roboter analysiert werden und jede seiner Komponenten auf Funktionsfähigkeit untersucht werden. \\
 	Danach wird die Software betrachtet und Entscheidungen bezüglich Umfang und Auswahlkriterien getroffen, sowie ein Framework vorgestellt, welches die Steuerung des Roboters ermöglicht. 
 	
 	
